--- a/Broker/ConsoleApp/ConsoleApp.csproj
+++ b/Broker/ConsoleApp/ConsoleApp.csproj
@@ -5,6 +5,14 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <DefineConstants>TRACE;RunAsService1</DefineConstants>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Windows.Compatibility" Version="3.1.1" />
+    </ItemGroup>
+
     <ItemGroup>
       <ProjectReference Include="..\..\Core\Network\Network.csproj" />
     </ItemGroup>
