--- a/Driver/BaseDriver/BaseDriver.csproj
+++ b/Driver/BaseDriver/BaseDriver.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.1" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Messages\Messages.csproj" />
     <ProjectReference Include="..\..\Core\Network\Network.csproj" />
